<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTFSOffline</string>
    <string name="action_dbmover">Scan Downloads Folder</string>
    <string name="action_settings">Settings</string>
    <string name="favs">Favourites</string>
    <string name="routestitle">Routes List</string>

    <string name="pref_dbs">databases</string>  
    <string name="use_dbs">Databases to Monitor</string>
  
    <string name="pref_num_closest_stops">numcloseststops</string>
    <string name="num_closest_stops">Number of Closest Stops to Return</string>
    <string name="pref_num_buses_per_stop">numbusesperstop</string>
    <string name="num_buses_per_stop">Number of Buses per Stop to List</string>
    <string name="default_num_closest_stops">8</string>
    <string name="default_num_buses_per_stop">3</string>

    <string name="pref_hours_look_ahead">hourslookahead</string>
    <string name="num_hours_look_ahead">Number of Hours to Look Ahead</string>
    <string name="default_hours_look_ahead">2</string>

    <string name="pref_grid_size_key">gridsizekm</string>
    <string name="grid_size">Search Window (km)</string>
    <string name="default_grid_size_km">0</string>
	
    <string name="pref_vibrate_key">busvibratekey</string>
    <string name="vibratenearbus">Vibrate when bus is near</string>

    <string name="about">About</string>
    <string name="ampmtimes">Show times as am/pm</string>
    <string name="app_description">An Offline Bus and Rail App</string>
    <string name="app_credits">Version: %1$s (internal %2$d), DB %3$d\n\nAuthor: Wilson Brenna\nwbrenna36@gmail.com</string>
    <string name="app_short_name">GTFSOffline</string>
    <string name="auto_check4dbupdate">Check online for schedule updates</string>
    <string name="button_routes">Routes</string>
    <string name="button_stops">Stops</string>
    <string name="calendar_expired">Your schedule data has apparently expired. Please install new GTFS DB files.</string>
    <string name="cancel">Cancel</string>
    <string name="closest_stops">Closest stops</string>
    <string name="cntinue">Continue</string>
    <string name="corrupt_exit">If you continue things may go downhill fast.</string>
    <string name="db_is_awol">Unable to open the schedule database.</string>
    <string name="db_copying">Searching and moving *.db.gz files&#8230;</string>
    <string name="db_download_now">Download %1$1.1f megs now?</string>
    <string name="db_downloading">Downloading the schedule database</string>
    <string name="db_is_corrupt">The new database is corrupt or incomplete.</string>
    <string name="db_new_avail">A new schedule database is available.</string>
    <string name="db_not_avail">You need to download the schedule database.</string>
    <string name="db_opening">Checking schedule database versions&#8230;</string>
    <string name="exit">Exit</string>
    <string name="favs_add_to_list">Add to favourites?</string>
    <string name="favs_remove_from_list">Remove from favourites?</string>
    <string name="favs_reorder_item">Reorder in your list?</string>
    <string name="find_route">Find a route</string>
    <string name="find_stop">Find a stop</string>
    <string name="last_location_fix">No recent location fix, using previous</string>
    <string name="legal_notices">Legal notices:</string>
    <string name="loading_routes">Loading the bus routes…</string>
    <string name="loading_stops">Loading the bus stops…</string>
    <string name="loading_times">Loading the bus times…</string>
    <string name="longpress_adds_stop">Long-press a stop to add to favourites.</string>
    <string name="longpress_removes_stop">Search to add stops, long-press to remove.</string>
    <string name="menu_settings">Settings</string>
    <string name="mylocation">My location</string>
    <string name="no">No</string>
    <string name="no_favourites">Use the search facility from the menu to find stops, or locate them on the map, and long-press to add them to your favourites list. Then a click shows all routes using that stop, and another shows the times.\n\nTo remove a favourite, long-press on the favourites list.</string>
    <string name="no_location_fix">No usable location fix! Searching....</string>
    <string name="no_location_providers">No GPS/Network Location Providers found! This app will not work.</string>
    <string name="no_more_busses">No more buses today.</string>
    <string name="preferences">Preferences</string>
    <string name="pref_ampmtimes_key">ampmtimes</string>
    <string name="pref_db_autoupdate_key">autodbupdate</string>
    <string name="pref_favstops_key">favstops</string>
    <string name="pref_useroutes_key">useroutenos</string>
    <string name="pref_showallbusses_key">showallbusses</string>
    <string name="pref_uuid_key">uuid</string>
    <string name="refresh">Refresh</string>
    <string name="rider_alerts">Rider alerts</string>
    <string name="route_fling">Swipe left to show all routes, or tap to show one.</string>
    <string name="search_hint">Enter search text</string>
    <string name="showallbusses">Show buses for all days</string>
    <string name="showmap">Show map</string>
    <string name="stop_unused">No routes use this stop in the current schedule.</string>
    <string name="tap_time_for_route">Tap a time to show one route.</string>
    <string name="tap_time_for_trip">Tap a time to show the trip.</string>
    <string name="title_activity_closest_stops">Closest Stops</string>
    <string name="title_favourites">Favourite Stops</string>
    <string name="title_mapstops">Transit Stops</string>
    <string name="title_rider_alerts">Rider Alerts</string>
    <string name="title_search">Search bus stops or routes</string>
    <string name="useroutes">Flag route numbers, not stops</string>
	<string name="yes">Yes</string>
    
</resources>
