<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <MultiSelectListPreference
        android:key="@string/pref_dbs"
        android:title="@string/use_dbs"
        android:summary="Activate databases (one tab each)."
        android:defaultValue="@array/empty_array" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_showallbusses_key"
        android:title="@string/showallbusses" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_ampmtimes_key"
        android:title="@string/ampmtimes" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_useroutes_key"
        android:title="@string/useroutes" />
    
    <ListPreference
        android:defaultValue="@string/default_hours_look_ahead"
        android:key="@string/pref_hours_look_ahead"
        android:entryValues="@array/HoursLookAhead"
        android:entries="@array/HoursLookAhead"
        android:title="@string/num_hours_look_ahead" />
    
    
    <ListPreference
        android:defaultValue="@string/default_num_buses_per_stop"
        android:key="@string/pref_num_buses_per_stop"
        android:entryValues="@array/ClosestBusNumberStrings"
        android:entries="@array/ClosestBusNumberStrings"
        android:title="@string/num_buses_per_stop" />
    
    <ListPreference
        android:defaultValue="@string/default_num_closest_stops"
        android:key="@string/pref_num_closest_stops"
        android:entryValues="@array/ClosestStopNumberStrings"
        android:entries="@array/ClosestStopNumberStrings"
        android:title="@string/num_closest_stops" />
    
    <ListPreference
        android:defaultValue="@string/default_grid_size_km"
        android:key="@string/pref_grid_size_key"
        android:entryValues="@array/GridSizeKm"
        android:entries="@array/GridSizeKm"
        android:summary="Only look for bus stops within this range."
        android:title="@string/grid_size" />
    


</PreferenceScreen>
